tooltop works (almost), added all emoji files

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,3 +60,11 @@
 .EmojisTone:active, .EmojisTone:checked {
 	border-radius: 6px;
 }
+
+.tooltip-label {
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 4px 8px;
+    border-radius: 4px;
+    font-size: 12px;
+}
